// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VListTileAction.js should render component and match snapshot 1`] = `

<div class="v-list-item__action">
</div>

`;

exports[`VListTileAction.js should render component with many children and match snapshot 1`] = `

<div class="v-list-item__action v-list-item__action--stack">
  <div>
  </div>
  <span>
  </span>
</div>

`;

exports[`VListTileAction.js should render component with one children and match snapshot 1`] = `

<div class="v-list-item__action">
  <div>
  </div>
</div>

`;

exports[`VListTileAction.js should render component with static class and match snapshot 1`] = `

<div class="v-list-item__action static-class">
</div>

`;

exports[`VListTileAction.js should work with v-html 1`] = `

<div class="v-list-item__action">
  <b>
    something
  </b>
</div>

`;
